name:               my-site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.15.*
                  , text
                  , pandoc
                  , bytestring
                  , base16-bytestring
                  , pandoc-types
                  
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
