name:                myblog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://https://github.com/userJY
license:             BSD3
license-file:        LICENSE
author:              Jason Yang
maintainer:          jasonyang299@gmail.com
copyright:           2021 Jason Yang
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable myblog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       
    base >= 4.7 && < 5,
    hakyll,
    pandoc,
    containers    
